# offixAdventure

./: .gitignore  CMakeLists.txt  README.md  offixAdventure.code-workspace
include/: animation.hpp  bullet.hpp  button.hpp  character.hpp  collectible.hpp  enemy.hpp  engine.hpp  game.hpp  gameOverMenu.hpp  gameState.hpp  globals.hpp  map.hpp  menu.hpp  pauseMenu.hpp  player.hpp  tile.hpp
res/: map.txt
src/: animation.cpp  bullet.cpp  button.cpp  character.cpp  collectible.cpp  enemy.cpp  engine.cpp  game.cpp  gameOverMenu.cpp  gameState.cpp  globals.cpp  main.cpp  map.cpp  menu.cpp  pauseMenu.cpp  player.cpp  tile.cpp
